--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-CaspirCam's commitment to privacy is simple: We don't track you! We don't collect or transmit your data; instead, information you submit in our app is stored privately and securely on your device. Your information won't ever be shared with us or any third party without your explicit permission.
+CaspirCam Privacy Policy
+This policy effective December 10, 2022
+
+Terms
+We’re committed to protecting your privacy so our privacy policy is simple: no personal data shared with us will be given to any third party, under any circumstances. Your data will also never be used by us for any purpose without specific permission.
+The app engages in no ad targeting, data mining, or other activities that may compromise your privacy, and we do not affiliate ourselves with any third parties that do so.
+
+Changes to this policy
+We may make small, inconsequential changes to this policy with or without notice to you, so you’re encouraged to review the policy from time to time. Substantive changes to this policy will be emailed to users who submit a request to graceraper@gmail.com.
+
+Contact
+You can contact us at graceraper@gmail.com if you have any questions about this policy.
